{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 1721,
  "lineage": "568e194b-0613-836c-b14e-77061e9e1d31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ERICSSON",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f110ad094e24f87c",
            "arn": "arn:aws:ec2:us-west-1:131289783853:instance/i-034935fad4f268876",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034935fad4f268876",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "calkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054bc4e2f16576074",
            "private_dns": "ip-172-16-1-194.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.194",
            "public_ip": "3.101.143.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068aeb2e030cbd90f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9c87cf52017bba0",
            "tags": {
              "Name": "ERICSSON-0"
            },
            "tags_all": {
              "Name": "ERICSSON-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9a8418427dbe66f"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_prod_secgrp",
            "aws_subnet.vpc_prod_subnet1",
            "aws_vpc.vpc_prod",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:internet-gateway/igw-08de99122f8a33884",
            "id": "igw-08de99122f8a33884",
            "owner_id": "131289783853",
            "tags": {
              "Name": "vpc_prod_igw"
            },
            "tags_all": {
              "Name": "vpc_prod_igw"
            },
            "vpc_id": "vpc-014c7beff92b04dcd"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_prod_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:route-table/rtb-085d12e11fd0300fb",
            "id": "rtb-085d12e11fd0300fb",
            "owner_id": "131289783853",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08de99122f8a33884",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_prod_route1"
            },
            "tags_all": {
              "Name": "vpc_prod_route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c7beff92b04dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8ede943ed3ab05b",
            "route_table_id": "rtb-085d12e11fd0300fb",
            "subnet_id": "subnet-0a9c87cf52017bba0"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_route_table.vpc_prod_route1",
            "aws_subnet.vpc_prod_subnet1",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d852ed70750f82cf",
            "route_table_id": "rtb-085d12e11fd0300fb",
            "subnet_id": "subnet-0b6ffd10eb79a79d2"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_route_table.vpc_prod_route1",
            "aws_subnet.vpc_prod_subnet2",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aec3f111bbc0db0",
            "route_table_id": "rtb-085d12e11fd0300fb",
            "subnet_id": "subnet-01377a4c1c92ee231"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_route_table.vpc_prod_route1",
            "aws_subnet.vpc_prod_subnet3",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_prod_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:security-group/sg-0c9a8418427dbe66f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9a8418427dbe66f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH into VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Secured TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC server",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mongodb",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rocketchat",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "vpc_prod_secgrp",
            "name_prefix": "",
            "owner_id": "131289783853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c7beff92b04dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_prod_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:subnet/subnet-0a9c87cf52017bba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9c87cf52017bba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131289783853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_prod_subnet1"
            },
            "tags_all": {
              "Name": "vpc_prod_subnet1"
            },
            "vpc_id": "vpc-014c7beff92b04dcd"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_prod_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:subnet/subnet-0b6ffd10eb79a79d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6ffd10eb79a79d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131289783853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_prod_subnet2"
            },
            "tags_all": {
              "Name": "vpc_prod_subnet2"
            },
            "vpc_id": "vpc-014c7beff92b04dcd"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_prod_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:subnet/subnet-01377a4c1c92ee231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01377a4c1c92ee231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131289783853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_prod_subnet3"
            },
            "tags_all": {
              "Name": "vpc_prod_subnet3"
            },
            "vpc_id": "vpc-014c7beff92b04dcd"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:vpc/vpc-014c7beff92b04dcd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-09574896311f08082",
            "default_route_table_id": "rtb-04bca941e4aa2357d",
            "default_security_group_id": "sg-028efe594b3d0ded4",
            "dhcp_options_id": "dopt-0ddfb747c9b61a0ea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014c7beff92b04dcd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04bca941e4aa2357d",
            "owner_id": "131289783853",
            "tags": {
              "Name": "VPC_PROD"
            },
            "tags_all": {
              "Name": "VPC_PROD"
            }
          }
        }
      ]
    }
  ]
}